Added disassembly display

--- a/interface/index.html
+++ b/interface/index.html
@@ -544,12 +544,7 @@
             <td id="dashboard">
                 <div class="border_container">
                     <h4>Instruction courante</h4>
-                    <div id="editorLineNum"></div>
-                    <div id="stepInLine"></div>
-                    <div id="ic"></div>
-                    <div id="instruct"></div>
-                    <div id="lable"></div>
-                    <div id="data"></div>
+                    <div id="disassembly"></div>
                 </div>
                 <div class="border_container">
                     <h4>M&eacute;moire</h4>
