Began index page

--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -2,7 +2,7 @@
 <html lang="fr-CA">
     <head>
         <meta charset="UTF-8">
-        <title>ARM Simulator</title>
+        <title>Simulateur ARM</title>
         <link rel="stylesheet" type="text/css" media="screen" href="static/css/style.css">
         <script src="static/js/ace/ace.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript">
