--- a/interface/index.html
+++ b/interface/index.html
@@ -3,16 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <title>GIF-1001 -- OSA</title>
-        <style type="text/css">
-        </style>
+        <link rel="stylesheet" type="text/css" media="screen" href="static/css/style.css"/>
+        <script src="static/js/jquery-1.11.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="static/js/jquery.easytabs.min.js" type="text/javascript" charset="utf-8"></script>
     </head>
-    <body id="body_">
-    <h4>{{ title }}</h4>
-    %for section_name, items in sections.items():
-        {{ section_name }}
-        <ul>
-        %for item, link in items.items():
-            <li><a href="?sim={{ link }}">{{ item }}</a></li>
-        </ul>
+    <body>
+        <div id="left_menu">
+            <a href="?page=demo"><div class="left_item">D&eacute;mo</div></a>
+            <a href="?page=exo"><div class="left_item">Exercices facultatifs</div></a>
+            <a href="?page=tp"><div class="left_item">Travaux pratiques</div></a>
+            <a href="?sim=nouveau#tabsmain-simulation"><div class="left_item">Nouvelle session</div></a>
+        </div>
+        <div id="content">
+        <h4>{{ title }}</h4>
+        % for section_name, items in sections.items():
+            {{ section_name }}
+            <ul>
+            % for item, link in items.items():
+                <li><a href="?page={{ page }}&sim={{ link }}">{{ item }}</a></li>
+            % end
+            </ul>
+        % end
+        </div>
+        <div style="clear: both;"></div>
     </body>
 </html>
