Fixed error displayed when using the simulator before websocket ready, and launching a new session

--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -25,7 +25,7 @@
         <a href="?page=demo"><div class="left_item">D&eacute;mo</div></a>
         <a href="?page=exo"><div class="left_item">Exercices facultatifs</div></a>
         <a href="?page=tp"><div class="left_item">Travaux pratiques</div></a>
-        <a href="?sim=nouveau#tabsmain-simulation"><div class="left_item">Nouvelle session</div></a>
+        <a href="?sim=nouveau&r={{ rand }}#tabsmain-simulation"><div class="left_item">Nouvelle session</div></a>
     </div>
     <div id="tabmain-container" class="tab-container">
         <ul class="etabs">
