--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -58,67 +58,67 @@
                                                     <th class="regh_val">Valeur</th>
                                                 </tr>
                                                 </thead>
-                                                <tr>
+                                                <tr id="user_r0" class="register_row">
                                                     <td>r0</td>
                                                     <td><input class="regVal formatted_value" id="r0" type="text" name="r0"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="user_r1" class="register_row">
                                                     <td>r1</td>
                                                     <td><input class="regVal formatted_value" id="r1" type="text" name="r1"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="user_r2" class="register_row">
                                                     <td>r2</td>
                                                     <td><input class="regVal formatted_value" id="r2" type="text" name="r2"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="user_r3" class="register_row">
                                                     <td>r3</td>
                                                     <td><input class="regVal formatted_value" id="r3" type="text" name="r3"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="user_r4" class="register_row">
                                                     <td>r4</td>
                                                     <td><input class="regVal formatted_value" id="r4" type="text" name="r4"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="user_r5" class="register_row">
                                                     <td>r5</td>
                                                     <td><input class="regVal formatted_value" id="r5" type="text" name="r5"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="user_r6" class="register_row">
                                                     <td>r6</td>
                                                     <td><input class="regVal formatted_value" id="r6" type="text" name="r6"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="user_r7" class="register_row">
                                                     <td>r7</td>
                                                     <td><input class="regVal formatted_value" id="r7" type="text" name="r7"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="user_r8" class="register_row">
                                                     <td>r8</td>
                                                     <td><input class="regVal formatted_value" id="r8" type="text" name="r8"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="user_r9" class="register_row">
                                                     <td>r9</td>
                                                     <td><input class="regVal formatted_value" id="r9" type="text" name="r9"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="user_r10" class="register_row">
                                                     <td>r10 (sl)</td>
                                                     <td><input class="regVal formatted_value" id="r10" type="text" name="r10"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="user_r11" class="register_row">
                                                     <td>r11 (fp)</td>
                                                     <td><input class="regVal formatted_value" id="r11" type="text" name="r11"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="user_r12" class="register_row">
                                                     <td>r12 (ip)</td>
                                                     <td><input class="regVal formatted_value" id="r12" type="text" name="r12"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="user_r13" class="register_row">
                                                     <td>r13 (sp)</td>
                                                     <td><input class="regVal formatted_value" id="r13" type="text" name="r13"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="user_r14" class="register_row">
                                                     <td>r14 (lr)</td>
                                                     <td><input class="regVal formatted_value" id="r14" type="text" name="r14"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="user_r15" class="register_row">
                                                     <td>r15 (pc)</td>
                                                     <td><input class="regVal formatted_value" id="r15" type="text" name="r15"/></td>
                                                 </tr>
@@ -441,10 +441,10 @@
                                     </div>
                                     <div>
                                         <h4>Instructions pour l'activation des breakpoints</h4>
-                                        <div id="help_r" class="mem_w help">&Eacute;criture (W) : Ctrl + Click</div>
-                                        <div id="help_w" class="mem_r help">Lecture (R) : Shift + Click</div>
-                                        <div id="help_rw" class="mem_rw help">Lecture et &Eacute;criture (RW) : Ctrl + Shift + Click</div>
-                                        <div id="help_e" class="mem_e help">Ex&eacute;cution (E) : Alt + Click</div>
+                                        <div id="help_r" class="mem_w help">&Eacute;criture (W) : Ctrl + Clic (Mac: Cmd + Clic)</div>
+                                        <div id="help_w" class="mem_r help">Lecture (R) : Shift + Clic</div>
+                                        <div id="help_rw" class="mem_rw help">Lecture et &Eacute;criture (RW) : Ctrl + Shift + Clic (Mac: Cmd + Shift + Clic)</div>
+                                        <div id="help_e" class="mem_e help">Ex&eacute;cution (E) : Alt + Clic</div>
                                         <div id="help_instr" class="mem_instr help">Instruction courante</div><br/>
                                     </div>
                                     <div>
@@ -498,6 +498,28 @@
 
         $(document).ready(function() {
 
+            $(".register_row").click(function(e) {
+                var mode = "";
+                if(e.ctrlKey || event.metaKey) {
+                    $(this).toggleClass("reg_bkp_w");
+                }
+                if(e.shiftKey) {
+                    $(this).toggleClass("reg_bkp_r");
+                }
+                if (!(e.ctrlKey || event.metaKey || e.shiftKey)) {
+                    return;
+                }
+
+                if ($(this).hasClass("reg_bkp_w")) {
+                    mode = mode + "w";
+                }
+                if ($(this).hasClass("reg_bkp_r")) {
+                    mode = mode + "r";
+                }
+                sendCmd(["update", "bp_" + mode + "_" + $(this).attr("id")]);
+                document.selection.empty();
+            });
+
             $("#config_diag").dialog({
                 autoOpen: false,
                 modal: true,
@@ -521,6 +543,7 @@
                     asm_breakpoints.push(row);
                 }
                 sendBreakpointsInstr();
+                document.selection.empty();
 			})
 
             editor.on("change",  function() {
