--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -32,12 +32,21 @@
             <td id="content-td">
                 <div id="tabmain-container" class="tab-container">
                     <ul class="etabs-main">
-                        <li class="tab-main"><a href="#tabsmain-enonce">&Eacute;nonc&eacute;</a></li>
+                        % if enonce:
+                            <li class="tab-main"><a href="#tabsmain-enonce">&Eacute;nonc&eacute;</a></li>
+                        % end
                         <li class="tab-main"><a href="#tabsmain-simulation">Simulation</a></li>
-                        <li class="tab-main"><a href="#tabsmain-solution">Solution</a></li>
+                        % if solution:
+                            <li class="tab-main"><a href="#tabsmain-solution">Solution</a></li>
+                        % end
                     </ul>
-                    <div id="tabsmain-enonce">{{ !enonce }}</div>
-                    <div id="tabsmain-solution">{{ !solution }}</div>
+                    % if enonce:
+                        <div id="tabsmain-enonce">{{ !enonce }}</div>
+                    % end
+                    % if solution:
+
+                        <div id="tabsmain-solution">{{ !solution }}</div>
+                    % end
                     <div id="tabsmain-simulation">
                         <table id="content-sim">
                             <tr>
@@ -441,9 +450,9 @@
                                     </div>
                                     <div>
                                         <h4>Instructions pour l'activation des breakpoints</h4>
-                                        <div id="help_r" class="mem_w help">&Eacute;criture (W) : Ctrl + Clic (Mac: Cmd + Clic)</div>
+                                        <div id="help_r" class="mem_w help">&Eacute;criture (W) : Ctrl/Cmd + Clic </div>
                                         <div id="help_w" class="mem_r help">Lecture (R) : Shift + Clic</div>
-                                        <div id="help_rw" class="mem_rw help">Lecture et &Eacute;criture (RW) : Ctrl + Shift + Clic (Mac: Cmd + Shift + Clic)</div>
+                                        <div id="help_rw" class="mem_rw help">Lecture et &Eacute;criture (RW) : Ctrl/Cmd + Shift + Clic</div>
                                         <div id="help_e" class="mem_e help">Ex&eacute;cution (E) : Alt + Clic</div>
                                         <div id="help_instr" class="mem_instr help">Instruction courante</div><br/>
                                     </div>
@@ -518,6 +527,7 @@
                 }
                 sendCmd(["update", "bp_" + mode + "_" + $(this).attr("id")]);
                 document.selection.empty();
+                
             });
 
             $("#config_diag").dialog({
@@ -595,10 +605,10 @@
 
         // Help buttons
         $("#stepback").tooltipster({ content: 'Step Back', position: 'right' });
-        $("#run").tooltipster({ content: 'Run', position: 'right' });
-        $("#stepin").tooltipster({ content: "Step Into", position: 'right' });
-        $("#stepforward").tooltipster({ content: 'Step Forward', position: 'right' });
-        $("#stepout").tooltipster({ content: 'Step Out', position: 'right' });
+        $("#run").tooltipster({ content: 'Exécuter', position: 'right' });
+        $("#stepin").tooltipster({ content: "Exécuter l'instruction courante", position: 'right' });
+        $("#stepforward").tooltipster({ content: 'Exécuter la ligne courante', position: 'right' });
+        $("#stepout").tooltipster({ content: 'Terminer la fonction', position: 'right' });
 
         // Changement de format
         var previous_format = "hex";
