--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -526,8 +526,8 @@
                     mode = mode + "r";
                 }
                 sendCmd(["update", "bp_" + mode + "_" + $(this).attr("id")]);
-                document.selection.empty();
                 
+                clearSelection();
             });
 
             $("#config_diag").dialog({
@@ -553,8 +553,11 @@
                     asm_breakpoints.push(row);
                 }
                 sendBreakpointsInstr();
-                document.selection.empty();
-			})
+			});
+
+            editor.on("guttermouseup",  function(e) {
+                clearSelection();
+            });
 
             editor.on("change",  function() {
                 if (debug_marker !== null) { editor.session.removeMarker(debug_marker); }
@@ -605,9 +608,9 @@
 
         // Help buttons
         $("#stepback").tooltipster({ content: 'Step Back', position: 'right' });
-        $("#run").tooltipster({ content: 'Exécuter', position: 'right' });
-        $("#stepin").tooltipster({ content: "Exécuter l'instruction courante", position: 'right' });
-        $("#stepforward").tooltipster({ content: 'Exécuter la ligne courante', position: 'right' });
+        $("#run").tooltipster({ content: 'Executer', position: 'right' });
+        $("#stepin").tooltipster({ content: "Executer l'instruction courante", position: 'right' });
+        $("#stepforward").tooltipster({ content: 'Executer la ligne courante', position: 'right' });
         $("#stepout").tooltipster({ content: 'Terminer la fonction', position: 'right' });
 
         // Changement de format
