--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -608,9 +608,9 @@
 
         // Help buttons
         $("#stepback").tooltipster({ content: 'Step Back', position: 'right' });
-        $("#run").tooltipster({ content: 'Executer', position: 'right' });
-        $("#stepin").tooltipster({ content: "Executer l'instruction courante", position: 'right' });
-        $("#stepforward").tooltipster({ content: 'Executer la ligne courante', position: 'right' });
+        $("#run").tooltipster({ content: 'Exécuter', position: 'right' });
+        $("#stepin").tooltipster({ content: "Exécuter l'instruction courante", position: 'right' });
+        $("#stepforward").tooltipster({ content: 'Exécuter la ligne courante', position: 'right' });
         $("#stepout").tooltipster({ content: 'Terminer la fonction', position: 'right' });
 
         // Changement de format
