--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -142,67 +142,67 @@
                                                     <th class="regh_val">Valeur</th>
                                                 </tr>
                                                 </thead>
-                                                <tr>
+                                                <tr id="fiq_r0" class="register_row">
                                                     <td>r0</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r0" type="text" name="r0"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="fiq_r1" class="register_row">
                                                     <td>r1</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r1" type="text" name="r1"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="fiq_r2" class="register_row">
                                                     <td>r2</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r2" type="text" name="r2"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="fiq_r3" class="register_row">
                                                     <td>r3</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r3" type="text" name="r3"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="fiq_r4" class="register_row">
                                                     <td>r4</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r4" type="text" name="r4"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="fiq_r5" class="register_row">
                                                     <td>r5</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r5" type="text" name="r5"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="fiq_r6" class="register_row">
                                                     <td>r6</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r6" type="text" name="r6"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="fiq_r7" class="register_row">
                                                     <td>r7</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r7" type="text" name="r7"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="fiq_r8" class="register_row">
                                                     <td>r8</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r8" type="text" name="r8"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="fiq_r9" class="register_row">
                                                     <td>r9</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r9" type="text" name="r9"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="fiq_r10" class="register_row">
                                                     <td>r10 (sl)</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r10" type="text" name="r10"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="fiq_r11" class="register_row">
                                                     <td>r11 (fp)</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r11" type="text" name="r11"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="fiq_r12" class="register_row">
                                                     <td>r12 (ip)</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r12" type="text" name="r12"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="fiq_r13" class="register_row">
                                                     <td>r13 (sp)</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r13" type="text" name="r13"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="fiq_r14" class="register_row">
                                                     <td>r14 (lr)</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r14" type="text" name="r14"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="fiq_r15" class="register_row">
                                                     <td>r15 (pc)</td>
                                                     <td><input class="regVal formatted_value" id="FIQ_r15" type="text" name="r15"/></td>
                                                 </tr>
@@ -217,67 +217,67 @@
                                                     <th class="regh_val">Valeur</th>
                                                 </tr>
                                                 </thead>
-                                                <tr>
+                                                <tr id="irq_r0" class="register_row">
                                                     <td>r0</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r0" type="text" name="r0"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="irq_r1" class="register_row">
                                                     <td>r1</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r1" type="text" name="r1"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="irq_r2" class="register_row">
                                                     <td>r2</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r2" type="text" name="r2"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="irq_r3" class="register_row">
                                                     <td>r3</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r3" type="text" name="r3"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="irq_r4" class="register_row">
                                                     <td>r4</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r4" type="text" name="r4"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="irq_r5" class="register_row">
                                                     <td>r5</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r5" type="text" name="r5"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="irq_r6" class="register_row">
                                                     <td>r6</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r6" type="text" name="r6"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="irq_r7" class="register_row">
                                                     <td>r7</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r7" type="text" name="r7"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="irq_r8" class="register_row">
                                                     <td>r8</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r8" type="text" name="r8"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="irq_r9" class="register_row">
                                                     <td>r9</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r9" type="text" name="r9"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="irq_r10" class="register_row">
                                                     <td>r10 (sl)</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r10" type="text" name="r10"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="irq_r11" class="register_row">
                                                     <td>r11 (fp)</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r11" type="text" name="r11"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="irq_r12" class="register_row">
                                                     <td>r12 (ip)</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r12" type="text" name="r12"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="irq_r13" class="register_row">
                                                     <td>r13 (sp)</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r13" type="text" name="r13"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="irq_r14" class="register_row">
                                                     <td>r14 (lr)</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r14" type="text" name="r14"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="irq_r15" class="register_row">
                                                     <td>r15 (pc)</td>
                                                     <td><input class="regVal formatted_value" id="IRQ_r15" type="text" name="r15"/></td>
                                                 </tr>
@@ -292,67 +292,67 @@
                                                     <th class="regh_val">Valeur</th>
                                                 </tr>
                                                 </thead>
-                                                <tr>
+                                                <tr id="svc_r0" class="register_row">
                                                     <td>r0</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r0" type="text" name="r0"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="svc_r1" class="register_row">
                                                     <td>r1</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r1" type="text" name="r1"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="svc_r2" class="register_row">
                                                     <td>r2</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r2" type="text" name="r2"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="svc_r3" class="register_row">
                                                     <td>r3</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r3" type="text" name="r3"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="svc_r4" class="register_row">
                                                     <td>r4</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r4" type="text" name="r4"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="svc_r5" class="register_row">
                                                     <td>r5</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r5" type="text" name="r5"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="svc_r6" class="register_row">
                                                     <td>r6</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r6" type="text" name="r6"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="svc_r7" class="register_row">
                                                     <td>r7</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r7" type="text" name="r7"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="svc_r8" class="register_row">
                                                     <td>r8</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r8" type="text" name="r8"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="svc_r9" class="register_row">
                                                     <td>r9</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r9" type="text" name="r9"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="svc_r10" class="register_row">
                                                     <td>r10 (sl)</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r10" type="text" name="r10"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="svc_r11" class="register_row">
                                                     <td>r11 (fp)</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r11" type="text" name="r11"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="svc_r12" class="register_row">
                                                     <td>r12 (ip)</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r12" type="text" name="r12"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="svc_r13" class="register_row">
                                                     <td>r13 (sp)</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r13" type="text" name="r13"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="svc_r14" class="register_row">
                                                     <td>r14 (lr)</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r14" type="text" name="r14"/></td>
                                                 </tr>
-                                                <tr>
+                                                <tr id="svc_r15" class="register_row">
                                                     <td>r15 (pc)</td>
                                                     <td><input class="regVal formatted_value" id="SVC_r15" type="text" name="r15"/></td>
                                                 </tr>
