--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -569,15 +569,27 @@
                 editor.resize();
             });
 
+            $("#interrupt_type").change(function () {
+                if (document.getElementById('interrupt_active').checked) {
+                    sendCmd(["interrupt", true, $("#interrupt_type").val(), parseInt($("#interrupt_cycles").val()), parseInt($("#interrupt_cycles_first").val())]);
+                }
+            });
+
+            $("#interrupt_active").change(function () {
+                if (this.checked) {
+                        sendCmd(["interrupt", true, $("#interrupt_type").val(), parseInt($("#interrupt_cycles").val()), parseInt($("#interrupt_cycles_first").val())]);
+                    } else {
+                        sendCmd(["interrupt", false, $("#interrupt_type").val(), parseInt($("#interrupt_cycles").val()), parseInt($("#interrupt_cycles_first").val())]);
+                    }
+            });
+
             $("input[type=text]").change(function () {
                 var objid = $(this).attr("id");
                 if (objid == "animate_speed") { return; }
 
-                if (objid == "interrupt_active") {
+                if (objid == "interrupt_active" || objid == "interrupt_cycles" || objid == "interrupt_cycles_first") {
                     if (document.getElementById('interrupt_active').checked) {
                         sendCmd(["interrupt", true, $("#interrupt_type").val(), parseInt($("#interrupt_cycles").val()), parseInt($("#interrupt_cycles_first").val())]);
-                    } else {
-                        sendCmd(["interrupt", false, $("#interrupt_type").val(), parseInt($("#interrupt_cycles").val()), parseInt($("#interrupt_cycles_first").val())]);
                     }
                     return;
                 }
