Fixed removal of breakpoint scrolling

--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -493,6 +493,7 @@
 
     <script type="text/javascript">
         var blockSelect = 0;
+        var selectLine = -1;
 
         $('#tabmain-container').easytabs({
             "animate": false
@@ -560,6 +561,7 @@
                 sendBreakpointsInstr();
 
                 blockSelect = blockSelect + 1;
+                selectLine = row;
                 setTimeout(function() {
                     blockSelect = blockSelect - 1;
                 }, 500);
@@ -569,12 +571,12 @@
                 if (blockSelect > 0) {
                     editor.selection.setSelectionRange({
                         start: {
-                            row: 0,
-                            column: 0
+                            row: selectLine,
+                            column: selectLine
                         },
                         end: {
-                            row: 0,
-                            column: 0
+                            row: selectLine,
+                            column: selectLine
                         }
                     });
                 }
