Lightmode save and fixed font size

--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -512,6 +512,13 @@
 
         $(document).ready(function() {
 
+            if (localStorage.getItem("lightmode") === "1") {
+                $(".ace_content").addClass("lightmode");
+                editor.setOptions({
+                  fontSize: "12pt"
+                });
+            }
+
             $(".register_row").click(function(e) {
                 var mode = "";
                 if(e.ctrlKey || event.metaKey) {
@@ -690,10 +697,25 @@
         });
 
         disableSim();
+
     });
 
     $("#lightmode").click(function () {
         $(".ace_content").toggleClass("lightmode");
+        var fontsize = "10pt";
+        if ($(".ace_content").hasClass("lightmode")) {
+            fontsize = "12pt";
+            if (typeof(Storage) !== "undefined") {
+                localStorage.setItem("lightmode", "1");
+            }
+        } else {
+            if (typeof(Storage) !== "undefined") {
+                localStorage.setItem("lightmode", "0");
+            }
+        }
+        editor.setOptions({
+          fontSize: fontsize
+        });
     });
     </script>
     <script src="static/js/memory_viewer.js" type="text/javascript" charset="utf-8"></script>
