--- a/interface/index.html
+++ b/interface/index.html
@@ -12,7 +12,7 @@
             <tr>
                 <td id="left_menu">
                     <a href="?page=demo"><div class="left_item{{!' current_page' if page == "demo" else ""}}"><div class="left_item_inner">D&eacute;mo</div></div></a>
-                    <a href="#" style="color: #AAA"><div class="left_item{{!' current_page' if page == "exo" else ""}}"><div class="left_item_inner">Exercices facultatifs</div></div></a>
+                    <a href="?page=exo"><div class="left_item{{!' current_page' if page == "exo" else ""}}"><div class="left_item_inner">Exercices facultatifs</div></div></a>
                     <a href="?page=tp"><div class="left_item{{!' current_page' if page == "tp" else ""}}"><div class="left_item_inner">Travaux pratiques</div></div></a>
                     <a href="?sim=nouveau#tabsmain-simulation"><div class="left_item"><div class="left_item_inner">Nouvelle session</div></div></a>
                     <div style="height: 100%;"></div>
