Added accueil page

--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -24,6 +24,7 @@
     <table id="content-main">
         <tr>
             <td id="left_menu">
+                <a href="?page=accueil"><div class="left_item{{!' current_page' if page == "accueil" else ""}}"><div class="left_item_inner">Accueil</div></div></a>
                 <a href="?page=demo"><div class="left_item{{!' current_page' if page == "demo" else ""}}"><div class="left_item_inner">D&eacute;mo</div></div></a>
                 <a href="?page=exo"><div class="left_item{{!' current_page' if page == "exo" else ""}}"><div class="left_item_inner">Exercices facultatifs</div></div></a>
                 <a href="?page=tp"><div class="left_item{{!' current_page' if page == "tp" else ""}}"><div class="left_item_inner">Travaux pratiques</div></div></a>
